# botbot-mentorpi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  auto_install.sh  botbrain.service  docker-compose.yaml  web_server.service
botbrain_ws/: README.md  README_pt.md  cyclonedds_config.xml  robot_config.yaml  robot_select.sh
botbrain_ws/src/bot_bringup/: CMakeLists.txt  README.md  README_pt.md  package.xml
botbrain_ws/src/bot_camera/: package.xml  setup.cfg  setup.py
botbrain_ws/src/bot_camera/bot_camera/: camera_node.py
botbrain_ws/src/bot_custom_interfaces/: CMakeLists.txt  README.md  README_pt.md  package.xml
botbrain_ws/src/bot_description/: CMakeLists.txt  README.md  README_pt.md  package.xml
botbrain_ws/src/bot_jetson_stats/: .gitignore  README.md  README_pt.md
botbrain_ws/src/bot_jetson_stats/bot_jetson_stats/: CMakeLists.txt  package.xml
botbrain_ws/src/bot_jetson_stats/bot_jetson_stats/bot_jetson_stats/: utils.py
botbrain_ws/src/bot_jetson_stats/bot_jetson_stats/launch/: stats.launch.py
botbrain_ws/src/bot_jetson_stats/bot_jetson_stats/scripts/: network_mode_publisher.py  ros2_jtop_node.py  wifi_services.py
botbrain_ws/src/bot_localization/: README.md  README_pt.md
botbrain_ws/src/bot_navigation/: CMakeLists.txt  README.md  README_pt.md  package.xml
botbrain_ws/src/bot_rosa/: CMakeLists.txt  README.md  README_pt.md  package.xml
botbrain_ws/src/bot_rosa/bot_rosa/: agent.py  llm.py  prompts.py
botbrain_ws/src/bot_rosa/launch/: rosa.launch.py
botbrain_ws/src/bot_rosa/scripts/: rosa_service.py
botbrain_ws/src/bot_state_machine/: CMakeLists.txt  README.md  README_pt.md  package.xml
botbrain_ws/src/bot_state_machine/config/: accessories.json  camera.json  core.json  ia_stack.json  navigation.json
botbrain_ws/src/bot_state_machine/include/: graph_node.hpp  lifecycle_manager.hpp  state_controller.hpp  types.hpp
botbrain_ws/src/bot_state_machine/launch/: state_machine.launch.py
botbrain_ws/src/bot_state_machine/src/: graph_node.cpp  lifecycle_manager.cpp  state_controller.cpp  state_machine_node.cpp
botbrain_ws/src/bot_yolo/: README.md  README_br.md  package.xml  setup.cfg  setup.py
botbrain_ws/src/g1_pkg/: .gitignore  CMakeLists.txt  README.md  README_pt.md  package.xml
botbrain_ws/src/g1_pkg/config/: MID360_config.json  g1_params.yaml  nav2_params.yaml  pointcloud_to_laserscan_params.yaml
botbrain_ws/src/g1_pkg/g1_pkg/tools/: g1.py
botbrain_ws/src/g1_pkg/include/: g1_write.hpp  types.hpp
botbrain_ws/src/g1_pkg/include/g1_driver/: g1_driver.hpp
botbrain_ws/src/g1_pkg/launch/: livox_MID360.launch.py  pc2ls.launch.py  robot_interface.launch.py
botbrain_ws/src/g1_pkg/meshes/: g1_interface.mtl
botbrain_ws/src/g1_pkg/scripts/: g1_controller_commands.py  g1_read.py
botbrain_ws/src/g1_pkg/src/: g1_write.cpp  g1_write_node.cpp
botbrain_ws/src/g1_pkg/src/g1_driver/: g1_driver.cpp
botbrain_ws/src/g1_pkg/urdf/: robot.urdf
botbrain_ws/src/g1_pkg/xacro/: robot.xacro
botbrain_ws/src/go2_pkg/: CMakeLists.txt  README.md  README_pt.md  go2_setup.bash  package.xml
botbrain_ws/src/joystick-bot/: CMakeLists.txt  README.md  README_br.md  package.xml
botbrain_ws/src/mentorpi_pkg/: CMakeLists.txt  mentorpi_setup.bash  package.xml
botbrain_ws/src/mentorpi_pkg/config/: camera_config.yaml  nav2_params.yaml
botbrain_ws/src/mentorpi_pkg/launch/: robot_interface.launch.py
botbrain_ws/src/mentorpi_pkg/maps/: .gitkeep
botbrain_ws/src/mentorpi_pkg/mentorpi_pkg/: __init__.py
botbrain_ws/src/mentorpi_pkg/scripts/: mentorpi_controller_commands.py  mentorpi_read.py  mentorpi_write.py  ros_robot_controller_sdk.py
botbrain_ws/src/mentorpi_pkg/xacro/: robot.xacro
botbrain_ws/src/tita_pkg/: CMakeLists.txt  README.md  README_pt.md  package.xml  tita_setup.bash
docs/: BOOT_AUTOSTART.md  DEPENDENCIES.md  LICENSE  NETWORK_SETUP.md  SUPABASE_SETUP.md  installation-guide.md
docs/i18n/: README_es.md  README_fr.md  README_pt.md  README_zh-CN.md
docs/i18n/hardware/: README_es.md  README_fr.md  README_pt.md  README_zh-CN.md
docs/i18n/software/: README_es.md  README_fr.md  README_pt.md  README_zh-CN.md
frontend/: LICENSE  eslint.config.js  next.config.js  package-lock.json  package.json  storage-policies.sql  tailwind.config.ts  tsconfig.json
frontend/public/: example-map.pgm  example-map.yaml  test-inflation.html
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: apex-chart-wrapper.tsx  avatar-upload.tsx  change-password-popup.tsx  chart-card.tsx  chat-container-tts-only.tsx  chat-container.tsx  chat-tts.tsx  chat.tsx  color-picker.tsx  extras-bar.tsx  login.tsx  map-view-native.tsx  map-view-nav2.tsx  map-view.tsx  mission-map-view.tsx  mission-map-warning-banner.tsx  moondream-detections.tsx  moondream-mode-selector.tsx  nav-menu.tsx  popups-container.tsx  protected-route.tsx  ring-gauge.tsx  robot-3d-viewer.tsx  robot-cams.tsx  robot-connection-popup.tsx  robot-controls.tsx  robot-data.tsx  robot-header.tsx  ros-camera-img.tsx  ros-camera-raw.tsx  ros-rgbd-camera.tsx  sidebar.tsx  simple-map-view.tsx  soundboard-sound-clips.tsx  soundboard-tts-chat.tsx  soundboard-tts-presets.tsx  user-profile-popup.tsx  yolo-detections.tsx  yolo-filter-bar.tsx  yolo-settings-dialog.tsx
frontend/src/content/: privacy-policy.ts  terms-of-service.ts
frontend/src/contexts/: ActiveMissionContext.tsx  ConfirmationDialogContext.tsx  DashboardContext.tsx  HeaderContext.tsx  LanguageContext.tsx  NavigationTargetsContext.tsx  RobotConnectionContext.tsx  RobotProfileContext.tsx  SpeedModeContext.tsx  SupabaseProvider.tsx  ThemeContext.tsx
frontend/src/hooks/: useBatteryTimeEstimator.tsx  useBlockProgramExecution.tsx  useDemoNotifications.ts  (+13 more)
hardware/: README.md
hardware/BotBrain/: bottom_case.3mf  bottom_case.step  bottom_case.stl  top_case.3mf  top_case.stl
hardware/G1/: g1_interface.3mf  g1_interface.step  g1_interface.stl
hardware/Go2/: go2_interface.3mf  go2_interface.step  go2_interface.stl
hardware/Tita/: tita_interface.3mf  tita_interface.step  tita_interface.stl
(+267 files in other folders)
