<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bot_jetson_stats</name>
  <version>0.0.0</version>
  <description>ROS2 package for monitoring and controlling NVIDIA Jetson hardware statistics</description>
  <maintainer email="atofetti@botbot.bot">ana</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>diagnostic_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
